fix language on sign up forms, adjust blog text spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -219,8 +219,11 @@ h4, .h4 {
 
 
 .error-message {
-    color: #CC9900 !important;
-    font-family: "brother-1816", sans-serif;
+    color: var(--blue)!important;
+    background-color: var(--pink);
+    padding: .5rem;
+    border-radius: .5rem;
+    font-family: var(--brother);
     font-size: 2.4rem !important;
     text-align: left !important;
     line-height: 105% !important;
